--- a/Card/Base.lproj/Main.storyboard
+++ b/Card/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--いいね！しよう-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Card" customModuleProvider="target" sceneMemberID="viewController">
@@ -306,7 +306,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" id="OAo-se-P3x"/>
+                    <navigationItem key="navigationItem" title="いいね！しよう" id="OAo-se-P3x"/>
                     <connections>
                         <outlet property="baseCard" destination="KFX-1B-6vk" id="kN8-3M-3dm"/>
                         <outlet property="likeImage" destination="Njy-qQ-WMP" id="BEp-4f-DE6"/>
@@ -327,10 +327,10 @@
             </objects>
             <point key="canvasLocation" x="786.95652173913049" y="37.5"/>
         </scene>
-        <!--Liked List Table View Controller-->
+        <!--いいね！リスト-->
         <scene sceneID="QKr-Fj-0XI">
             <objects>
-                <tableViewController id="HJZ-Rr-xTd" customClass="LikedListTableViewController" customModule="Card" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController title="いいね！リスト" id="HJZ-Rr-xTd" customClass="LikedListTableViewController" customModule="Card" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="qP3-xU-0Dx">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
