--- a/Card/Base.lproj/Main.storyboard
+++ b/Card/Base.lproj/Main.storyboard
@@ -53,7 +53,7 @@
                                         </subviews>
                                     </stackView>
                                 </subviews>
-                                <color key="backgroundColor" red="1" green="0.77759656649141584" blue="0.63380607808577683" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" red="0.0" green="0.99143940210000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="btb-sc-7vK" firstAttribute="leading" secondItem="Me7-7N-lAE" secondAttribute="leading" constant="10" id="8rx-by-mQp"/>
                                     <constraint firstAttribute="trailing" secondItem="btb-sc-7vK" secondAttribute="trailing" constant="10" id="AD1-Bz-ULn"/>
